# PolyTLS

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: example.toml
docker/: Dockerfile  dev.Dockerfile
docs/: README.md
docs/architecture/: proxy-mitm-flow.md
docs/demo/: Screencast_20260106_215551.webm
docs/diagrams/c4/: mitm-component.puml  mitm-context.puml
docs/fingerprints/: README.md
docs/fingerprints/real/: real_chrome.json  real_firefox.json  real_safari.json
docs/fingerprints/via-polytls/: curl_as_chrome.json  curl_as_chrome_http11.json  curl_as_firefox.json  curl_as_safari.json
docs/specs/: tls_mitm.md
docs/testing/: e2e.md  sanitizers.md
scripts/: sanitized.sh  sanitizer-test.sh
src/: alpn.rs  ca.rs  compress.rs  config.rs  error.rs  http_connect.rs  main.rs  mitm.rs  prefixed_stream.rs  profile.rs  proxy.rs
src/proxy/: e2e_test.rs  stress_test.rs
src/telemetry/: logger.rs  mod.rs  otlp.rs
